data/derived/sp14/progs/unify/prog1828.ml.out
Characters 77-89:
  let f x = let xx = x*x*x in (xx, xx < 512) in wwhile (f,2)
                                                ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
